# upload-course-action

./: .eslintrc.json  .gitignore  .pre-commit-config.yml  .pylintrc  .typos.toml  AGENTS.md  BETA_RELEASE_CHECKLIST.md  BETA_RELEASE_INFO.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MARKETPLACE_READINESS_REPORT.md  Makefile  PUBLISHING.md  README.md  TESTING.md  WORKFLOW_GUIDE.md  action.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci-tests.yml  deploy-course.yml  example-upload.yml  pre-commit.yml  release.yml  test.yml
.github/workflows-backup/: release.yml
DOCS/: custom-kernel-rnd.md
deploy-kernel/: action.yml  requirements.txt
deploy-kernel/src/scripts/: context_files.py  deploy_kernel.py  validate_dockerfile.py
examples/: Dockerfile.kernel  README.md  course.json  deploy-kernel-workflow.yml  example-workflow.yml  example.yaml  requirements.kernel.txt  test-workflow-act-local.yml  test-workflow-unpublished.yml  workflow.yml
scripts/: install-hooks.sh
src/: __init__.py  index.js
src/scripts/: __init__.py  cancel_course.py  check_images.py  common.py  config.py  context_files.py  create_course.py  deploy_common.py  poll_files_progress.py  poll_worker.py  update_course.py  upload_files.py  validate_api_key.py  validate_course.py  validate_dockerfile.py  verify_notebooks.py
test/: conftest.py
test/e2e/: test_action_flow.py  test_nasty_inputs.py
test/unit/: test_check_images.py  test_config.py  test_create_course.py  test_deploy_common.py  test_deploy_kernel.py  test_deploy_kernel_validate_dockerfile_wrapper.py  test_poll_files_progress.py  test_update_course.py  test_validate_api_key.py  test_validate_course.py  test_validate_dockerfile.py  test_verify_notebooks.py
